--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "solar-system-weight",
-  "version": "1.0.0",
-  "description": "Small app to teach how much would we weight on the surface of any celestial body",
+  "author": "Aiman Abdel-Samad",
+  "version": "0.0.1",
+  "description": "Small app to calculate weight on the surface of any celestial body of our Solar System",
   "main": "app.js",
   "scripts": {
     "test": "test",
@@ -13,23 +14,28 @@
   },
   "keywords": [
     "solar",
-    "system"
+    "system",
+    "weight",
+    "astronomy",
+    "calculate"
   ],
-  "author": "Aiman",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Aimanizales/solar-system-weight/issues"
   },
   "homepage": "https://github.com/Aimanizales/solar-system-weight#readme",
   "devDependencies": {
-    "browserify": "^13.1.0",
-    "del": "^2.2.1",
+    "browser-sync": "^2.17.2",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "sass": "^0.5.0"
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-sass": "^2.3.2",
+    "watchify": "^3.7.0"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": "^3.1.0",
-    "numbro": "^1.9.2"
+    "jquery": "^3.1.1",
+    "numbro": "^1.9.3"
   }
 }
