--- a/package.json
+++ b/package.json
@@ -29,13 +29,17 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-compile-handlebars": "^0.6.1",
+    "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "watchify": "^3.7.0"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
+    "modernizr": "^3.3.1",
     "numbro": "^1.9.3"
   }
 }
